# django-bulla

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  manage.py  pyproject.toml  requiements_dev.txt  settings_dev.py
django_bulla/: apps.py
django_bulla/migrations/: 0001_initial.py
django_bulla/models/: __init__.py  account.py  choices_max_length.py  normals.py  statement.py  transaction.py  transaction_leg.py
django_bulla/tests/factories/: account.py  statement.py  transaction.py  transaction_leg.py
django_bulla/tests/models/: test_account.py  test_statement.py  test_transaction.py  test_transaction_leg.py
docs/: conf.py  development.rst  index.rst  roadmap.rst  version_history.rst
test_app/: models.py  settings.py
test_app/tests/factories/: account.py  statement.py  transaction.py  transaction_leg.py
test_app/tests/models/: test_account.py  test_statement.py  test_transaction.py  test_transaction_leg.py
